Fix the toolbar floating over code

--- a/jupyterthemes/layout/notebook.less
+++ b/jupyterthemes/layout/notebook.less
@@ -7,7 +7,7 @@ div#notebook {
     line-height: @cc-line-height;
     color: @cc-input-fg;
     -webkit-font-smoothing: antialiased !important;
-    padding-top: 25px !important;
+    // padding-top: 25px !important;
 }
 body,
 div.body {
@@ -35,7 +35,7 @@ a:hover, a:focus {
     -webkit-font-smoothing: antialiased !important;
 }
 div#maintoolbar {
-    position: absolute;
+    // position: absolute;
     width: 90%;
     margin-left: -10%;
     padding-right: 8%;
