Let the toolbar take the full width

--- a/jupyterthemes/layout/notebook.less
+++ b/jupyterthemes/layout/notebook.less
@@ -36,9 +36,9 @@ a:hover, a:focus {
 }
 div#maintoolbar {
     // position: absolute;
-    width: 90%;
+    // width: 90%;
     margin-left: -10%;
-    padding-right: 8%;
+    // padding-right: 8%;
     float: left;
     // background: transparent !important;
     background: @notebook-bg !important;
