Use a less prominent color for horizontal dividers...
Note: not really tested with themes other than "solarizedl".

--- a/jupyterthemes/layout/cells.less
+++ b/jupyterthemes/layout/cells.less
@@ -632,11 +632,11 @@ hr {
     margin-top: 8px;
     margin-bottom: 10px;
     border: 0;
-    border-top: 1px solid @header-fg;
+    border-top: 1px solid @table-border;
 }
 .rendered_html hr {
-    color: @header-fg;
-    background-color: @header-fg;
+    color: @table-border;
+    // background-color: @header-fg;
     margin-right: 2em;
 }
 
