--- a/jupyterthemes/layout/cells.less
+++ b/jupyterthemes/layout/cells.less
@@ -179,9 +179,9 @@ div.prompt_container {
     text-align: right;
 }
 
-div.cell.code_cell .input_prompt {
-    border-right: @prompt-border;
-}
+// div.cell.code_cell .input_prompt {
+//     border-right: @prompt-border;
+// }
 
 div.cell.selected .prompt {
     top: 0;
@@ -348,13 +348,13 @@ div.cell.code_cell .output_prompt {
 div.cell.selected .output_prompt,
 div.cell.selected .out_prompt_overlay.prompt {
     border-left: 5px solid @tc-border-edit;
-    border-right: 2px solid @cc-output-bg;
+    // border-right: 2px solid @cc-output-bg;
     border-radius: 0px !important;
 }
 .edit_mode div.cell.selected .output_prompt,
 .edit_mode div.cell.selected .out_prompt_overlay.prompt {
     border-left: 5px solid @tc-border-edit;
-    border-right: 2px solid @cc-output-bg;
+    // border-right: 2px solid @cc-output-bg;
     border-radius: 0px !important;
 }
 
@@ -445,7 +445,7 @@ div.cell.text_cell.rendered .prompt {
     min-width: @tc-prompt-width !important;
     width: @tc-prompt-width !important;
     background-color: @text-cell-bg;
-    border-right: @tc-prompt-border;
+    // border-right: @tc-prompt-border;
     // border-left: 4px solid @tc-border-selected;
     border-left: 4px solid @text-cell-bg;
 }
@@ -461,20 +461,20 @@ div.cell.text_cell.unrendered .prompt {
     border-left: 4px solid @text-cell-bg;
     background-color: @text-cell-bg;
 }
-div.cell.text_cell.rendered .prompt {
-    border-right: @tc-prompt-border;
-}
+// div.cell.text_cell.rendered .prompt {
+//     border-right: @tc-prompt-border;
+// }
 div.cell.text_cell.rendered.selected .prompt {
     top: 0;
     border-left: 4px solid @tc-border-selected;
-    border-right: @tc-prompt-border;
+    // border-right: @tc-prompt-border;
 }
 div.text_cell.unrendered.selected .prompt,
 div.text_cell.rendered.selected .prompt {
     top: 0;
     background: @text-cell-bg;
     border-left: 4px solid @tc-border-edit;
-    border-right: @tc-prompt-border;
+    // border-right: @tc-prompt-border;
 }
 
 
